header and list no longer overlap

--- a/src/App.css
+++ b/src/App.css
@@ -50,14 +50,12 @@ header{
 }
 
 .todobox {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   border-style: solid;
   border-width: 10px;
   border-radius: 10px;
   padding: 40px;
   padding-top: 20px;
-  width: 450px
+  margin: auto;
+  width: 60%;
+
 }
